# fastapi-template

./: .env.example  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 00c5119c44cd_make_loggin_model.py  2d661f2bf146_add_foreign_key_to_token.py  57a98912faf1_change_log_and_base_models.py  6c36a965d33d_make_roles_permissions_models.py  6e8da9ad1655_migrate_from_column_to_mapped_column.py  7f54fd4e456b_make_password_reset_model.py  892ef653432e_make_user_token_user_login_models.py  dc01b5d9cfa0_table_of_user_login.py  f068b3bc9ca0_add_timezone_to_datetime.py
app/: main.py
app/api/: auth.py  users.py
app/api/auth/: __init__.py  password.py  roles.py
app/core/: config.py
app/core/plugins/: i18n.py
app/core/utils/: router.py
app/db/: __init__.py  base_models.py
app/db/models/: auth.py  base.py  logging.py
app/db/seeders/: __main__.py  user_seeder.py
app/logic/repositories/: log_repository.py  role_repository.py  token_repository.py  user_repository.py
app/logic/services/: base.py  log_service.py  password.py  user_service.py
app/middleware/: __init__.py
app/schemas/: base.py
app/schemas/auth/: __init__.py  auth.py  base.py  password.py  roles.py
app/schemas/users/: __init__.py  base.py
app/services/: log_service.py  password.py  user_service.py
app/types/enums/: __init__.py  log_level.py
app/utils/auth/: __init__.py  auth.py  password.py  token.py
cli/: __main__.py  commands.py
cli/database/: __init__.py  downgrade.py  seed.py  upgrade.py
lang/: en.yml  ru.yml
lang/auth/: en.yml
(+21 files in other folders)
