[project]
name = "template"
version = "0.1.0"
description = "Template for FastAPI projects"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi-offline>=1.7.5",
    "fastapi[all]>=0.115.12",
    "i18nice[yaml]>=0.16.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn>=0.34.2",
]
[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "black>=25.1.0",
    "mypy>=1.15.0",
    "ruff>=0.11.8",
    "googletrans>=4.0.2",
]

[tool.ruff]
exclude = [
    ".venv",
    "alembic",
    "**/__init__.py",
]

[[tool.mypy.overrides]]
module = ["i18n.*"]
follow_untyped_imports = true
